--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "antd-mobile": "^2.3.4",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "babel-polyfill": "^6.26.0",
@@ -61,7 +63,10 @@
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -134,9 +139,13 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      ["import", { "libraryName": "antd-mobile", "style": "css" }]
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "react-router-dom": "^5.2.0"
   }
